Fix styling where heading text was cut off by image (100m page).

--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -54,7 +54,6 @@ a
   font-weight: normal
   text-align: center
   margin-top: 35px
-  margin-bottom: -20px
 
 .intro-starts em
   letter-spacing: normal
